# rust-coop

./: README.md
client/: Cargo.toml
client/src/: game.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
