[package]
name = "client"
version = "0.1.0"
authors = ["ledangkhoalt <ledangkhoalt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tungstenite = "0.11.0"
url = "2.1.1"
log = "0.4.8"
env_logger = "0.7.1"
